Changed CSS for the issue with horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -191,7 +191,7 @@ a:hover {
   }
 
   main {
-    padding: 0px 20px 50px;
+    padding: 0px 2px 20px;
   }
 
   footer {
@@ -203,7 +203,7 @@ a:hover {
     margin: 0 auto;
     font-size: 15px;
     color: white;
-    padding: 20px 20px;
+    padding: 5px 5px;
   }
 
   .learn-more-button {
@@ -254,10 +254,9 @@ a:hover {
     width: 100%;
     aspect-ratio: 16 /9;
   }
-
   .container {
-    max-width: fit-content;
-    padding: 15px 15px;
+    max-width: 100%;
+    padding: 0px 0px;
     margin: 0 auto;
   }
 }
@@ -276,12 +275,12 @@ a:hover {
   }
 
   main {
-    padding: 30px 50px 30px;
+    padding: 0px 2px 20px;
   }
 
   .container {
-    max-width: fit-content;
-    padding: 15px 15px;
+    max-width: 100%;
+    padding: 0px 0px;
     margin: 0 auto;
   }
 }
@@ -289,5 +288,10 @@ a:hover {
 @media (max-width: 1342px) {
   .heading {
     margin-top: -17px;
+  }
+  .container {
+    max-width: 100%;
+    padding: 0px 0px;
+    margin: 0 auto;
   }
 }
